--- a/Intro_web_3/pages/espesificidad.html
+++ b/Intro_web_3/pages/espesificidad.html
@@ -5,8 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prioridad</title>
+    <link rel="stylesheet" href="../styles/prioridad.css">
 </head>
 <body>
-    
+    <div>
+        <h1 id="dato0">Selector tipo ID</h1>
+    </div>
+    <div>
+        <h2 class="pato">Selector tipo clase</h2>
+    </div>
+    <div>
+        <h2>Selector de etiqueta</h2>
+    </div>
 </body>
 </html>
