--- a/Intro_web_4/pages/Viajes.html
+++ b/Intro_web_4/pages/Viajes.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,19 +8,20 @@
     <title>Viajes</title>
     <link rel="stylesheet" href="../styles/viajes.css">
 </head>
+
 <body>
     <br>
-    <form action="" method="">
+    <form action="" method="get">
         <h2>Agencia de viajes perrona</h2>
         <br>
         <label for="destino">Destino</label>
         <select name="destino" id="destino">
             <option value=""></option>
-            <option value="">   Hawuai  </option>
-            <option value="">   Tokyo   </option>
-            <option value="">   Mexico  </option>
-            <option value="">   Atlantis  </option>
-            <option value="">   Roma  </option>
+            <option value=""> Hawuai </option>
+            <option value=""> Tokyo </option>
+            <option value=""> Mexico </option>
+            <option value=""> Atlantis </option>
+            <option value=""> Roma </option>
         </select>
         <br>
         <br>
@@ -31,8 +33,8 @@
         <label for="radio">Soy flexible con la Fecha de salida</label>
         <br>
         <br>
-        <label for="Num">Numero de alumnos</label>
-        <input type="number" name="Num" id="Num" min="0"> 
+        <label for="Num">Numero de pasajeros</label>
+        <input type="number" name="Num" id="Num" min="0">
         <br>
         <br>
         <input type="checkbox" name="nin" id="nin">
@@ -65,4 +67,5 @@
         <br>
     </form>
 </body>
+
 </html>
