--- a/Intro_web_5/pages/CV.html
+++ b/Intro_web_5/pages/CV.html
@@ -12,10 +12,10 @@
         <header>
             <div class="imagen">
                 <img src="../img/konkun.jpg" alt="Konkun">
+                <h1>Hola mi nombre es <span>Jose Antonio Haro Gonzalez</span> y este es mi resumen</h1>
             </div>
-            <h1>Hola mi nombre es <span>Jose Antonio Haro Gonzalez</span> y este es mi resumen</h1>
-            <nav>
-                <ul class="menu">
+            <nav class="menu">
+                <ul>
                     <li><a href="">Item1</a>
                         <ul>
                             <li><a href="">sub-item1</a></li>
@@ -43,7 +43,99 @@
                 </ul>
             </nav>
         </header>
-        <section>
+        <section class="clearfix">
+            <div class="pull-flex">
+                <div>
+                    <article>
+                        <h2>Acerca de</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Culpa delectus modi consectetur eaque dicta repellat laborum,
+                            consequatur aspernatur aperiam sint quo eos porro facilis repellendus
+                            in deleniti praesentium iusto facere!
+                        </p>
+                    </article>
+                </div>
+            </div>
+            <div class="pull-flex">
+                <div>
+                    <article>
+                        <h2>Contacto</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Culpa delectus modi consectetur eaque dicta repellat laborum,
+                            consequatur aspernatur aperiam sint quo eos porro facilis repellendus
+                            in deleniti praesentium iusto facere!
+                        </p>
+                    </article>
+                </div>
+            </div>
+            <div class="pull-flex">
+                <div>
+                    <h2>Educacion</h2>            
+                    <article class="educacion">
+                        <div class="an">
+                            <p>2012</p>
+                        </div>
+                        <div class="apre">
+                            <p>Aprendi a caminar</p>
+                        </div>
+                        <div class="an">
+                            <p>2015</p>
+                        </div>
+                        <div class="apre">
+                            <p>Aprendi no ahogarme tomando agua</p>
+                        </div>
+                    </article>
+                </div>
+            </div>
+            <div class="pull-flex">
+                <div>
+                    <article class="skills">
+                        <h2>skills</h2>
+                        <p>Caminar sobre el agua</p>
+                        <p>Saltar la soga </p>
+                        <p>Malavares con cuchillos</p>
+                    </article>
+                </div>
+            </div>
+            <div class="pull-flex">
+                <div>
+                    <h2>Experiencia</h2>
+                    <article class="educacion">
+                        <div class="comp">
+                            <p><span>Google</span> <br>2013-2014</p>
+                        </div>
+                        <div class="dev">
+                            <h3>Aprendi programacion Js</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores fugiat rerum iste sint. Facere natus id placeat aliquid quo magnam veniam illo expedita. Rerum deleniti quasi deserunt perferendis, sapiente dolorem.</p>
+                        </div>
+                        <div class="comp">
+                            <p><span>Apple</span> <br>2022-2023</p>
+                        </div>
+                        <div class="dev">
+                            <h3>Aprendi programacion Js</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores fugiat rerum iste sint. Facere natus id placeat aliquid quo magnam veniam illo expedita. Rerum deleniti quasi deserunt perferendis, sapiente dolorem.</p>
+                        </div>
+                    </article>
+                </div>
+            </div>
+            <div class="pull-flex">
+                <div>
+                    <h2>Hobbies</h2>
+                    <article class="hob">
+                        <p>
+                            Cazar pejelagartos
+                        </p>
+                        <p>
+                            Dibijar
+                        </p>
+                        <p>
+                            Diseño 3D
+                        </p>
+                    </article>
+                </div>
+            </div>
 
         </section>
         <footer>
