--- a/Intro_web_5/pages/CV.html
+++ b/Intro_web_5/pages/CV.html
@@ -75,16 +75,16 @@
                     <h2>Educacion</h2>            
                     <article class="educacion">
                         <div class="an">
-                            <p>2012</p>
+                            <p>2023</p>
                         </div>
                         <div class="apre">
-                            <p>Aprendi a caminar</p>
+                            <p>Universidad carrear Ing en comunicaciones y electronica </p>
                         </div>
                         <div class="an">
-                            <p>2015</p>
+                            <p>2023</p>
                         </div>
                         <div class="apre">
-                            <p>Aprendi no ahogarme tomando agua</p>
+                            <p>Bootcamp Generation</p>
                         </div>
                     </article>
                 </div>
@@ -93,9 +93,9 @@
                 <div>
                     <article class="skills">
                         <h2>skills</h2>
-                        <p>Caminar sobre el agua</p>
-                        <p>Saltar la soga </p>
-                        <p>Malavares con cuchillos</p>
+                        <p>HTML</p>
+                        <p>CSS</p>
+                        <p>Java Script</p>
                     </article>
                 </div>
             </div>
@@ -125,7 +125,7 @@
                     <h2>Hobbies</h2>
                     <article class="hob">
                         <p>
-                            Cazar pejelagartos
+                            Musica
                         </p>
                         <p>
                             Dibijar
