--- a/Intro_web_5/pages/CV.html
+++ b/Intro_web_5/pages/CV.html
@@ -62,10 +62,9 @@
                     <article>
                         <h2>Contacto</h2>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Culpa delectus modi consectetur eaque dicta repellat laborum,
-                            consequatur aspernatur aperiam sint quo eos porro facilis repellendus
-                            in deleniti praesentium iusto facere!
+                            Correo: harogjanto@gmail.com <br>
+                            TEL: 353 963 6636 <br>
+                            Direccion: anonima
                         </p>
                     </article>
                 </div>
@@ -104,17 +103,17 @@
                     <h2>Experiencia</h2>
                     <article class="educacion">
                         <div class="comp">
-                            <p><span>Google</span> <br>2013-2014</p>
+                            <p><span>Google</span> <br>2022</p>
                         </div>
                         <div class="dev">
-                            <h3>Aprendi programacion Js</h3>
+                            <h3>Introduccion al desarrollo web</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores fugiat rerum iste sint. Facere natus id placeat aliquid quo magnam veniam illo expedita. Rerum deleniti quasi deserunt perferendis, sapiente dolorem.</p>
                         </div>
                         <div class="comp">
-                            <p><span>Apple</span> <br>2022-2023</p>
+                            <p><span>Platzi</span> <br>2022-2023</p>
                         </div>
                         <div class="dev">
-                            <h3>Aprendi programacion Js</h3>
+                            <h3>Animaciones con css</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores fugiat rerum iste sint. Facere natus id placeat aliquid quo magnam veniam illo expedita. Rerum deleniti quasi deserunt perferendis, sapiente dolorem.</p>
                         </div>
                     </article>
