CV con idiomas y estrellas

--- a/Intro_web_5/pages/CV.html
+++ b/Intro_web_5/pages/CV.html
@@ -11,7 +11,7 @@
     <div class="container">
         <header>
             <div class="imagen">
-                <img src="../img/konkun.jpg" alt="Konkun">
+                <img class="imm" src="../img/konkun.jpg" alt="Konkun">
                 <h1>Hola mi nombre es <span>Jose Antonio Haro Gonzalez</span> y este es mi resumen</h1>
             </div>
             <nav class="menu">
@@ -134,7 +134,26 @@
                         </p>
                     </article>
                 </div>
+                <br><br>
+                <div>
+                    <div>
+                        <h2>idiomas</h2>
+                        <article>
+                            <div class="star">
+                                <div class="star1">
+                                    <div>Español</div>
+                                    <div>Ingles</div>    
+                                </div>
+                                <div class="star2">
+                                    <img src="../img/star-red.png" alt="">
+                                    <img src="../img/star-grey.png" alt="">
+                                </div>
+                            </div>
+                        </article>
+                    </div>
+                </div>
             </div>
+            
 
         </section>
         <footer>
