CV con estrellas en idiomas

--- a/Intro_web_5/pages/CV.html
+++ b/Intro_web_5/pages/CV.html
@@ -145,8 +145,12 @@
                                     <div>Ingles</div>    
                                 </div>
                                 <div class="star2">
-                                    <img src="../img/star-red.png" alt="">
-                                    <img src="../img/star-grey.png" alt="">
+                                    <div class="pint">
+                                        <div class="pintre"></div>
+                                    </div>
+                                    <div class="pint">
+                                        <div class="pintri"></div>
+                                    </div>
                                 </div>
                             </div>
                         </article>
