--- a/Intro_web_5/pages/CV.html
+++ b/Intro_web_5/pages/CV.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curriculum Vitae :: Jose Antonio HG</title>
     <link rel="stylesheet" href="../styles/CV.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
 </head>
 <body>
     <div class="container">
@@ -124,13 +125,13 @@
                     <h2>Hobbies</h2>
                     <article class="hob">
                         <p>
-                            Musica
+                            Musica <i class="fa-solid fa-heart-pulse"></i>
                         </p>
                         <p>
-                            Dibijar
+                            Dibijar <i class="fa-solid fa-pencil"></i>
                         </p>
                         <p>
-                            Diseño 3D
+                            Diseño 3D <i class="fa-solid fa-cube"></i>
                         </p>
                     </article>
                 </div>
@@ -161,7 +162,7 @@
 
         </section>
         <footer>
-
+            <h4>Desarrollador Front, Generation</h4>
         </footer>
     </div>
 </body>
