--- a/Js/js06/pages/index.html
+++ b/Js/js06/pages/index.html
@@ -14,7 +14,7 @@
     <br>
     <br>
     <!-- aqui van los botones -->
-    <button id="botonsum" class="botones">Suma</button>
+    <button onmouseover="cambiarCoIor('blue') " id="botonsum" cLass=" botones " >Suma</button>
     <button id="botonres" class="botones">Resta</button>
     <button id="botonmul" class="botones">Multiplicacion</button>
     <button id="botondiv" class="botones">Division</button>
